--- a/men.html
+++ b/men.html
@@ -1,178 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!--- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <!--- Bootstrap CSS -->
+        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
-    <!--- Additional CSS must be placed after Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/styles.css" />
+        <!--- Additional CSS must be placed after Bootstrap CSS -->
+        <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+        <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+        <link rel="stylesheet" href="css/styles.css" />
 
-    <title>Jocose Tie Gallery </title>
+        <title>Jocose Tie Gallery </title>
 
-    <!--  Adding icon -->
-    <link rel="icon" href="img/jocose-logo-icon.jpg">
+        <!--  Adding icon -->
+        <link rel="icon" href="img/jocose-logo-icon.jpg">
 
-</head>
+    </head>
 
-<body>
-    <header class="jumbotron jumbotron-fluid" id="hed">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <img src="img/logo-icon.jpg" height="130" width="130" class="img-fluid" />
+    <body>
+        <header class="jumbotron jumbotron-fluid" id="hed">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                        <img src="Images/logo-icon.jpg" height="130" width="130" class="img-fluid" />
+                    </div>
+                    <div class="col">
+                        <h1>Jocose Tie</h1>
+                        <h3>Ties and bowties handcrafted with love</br>for passionate fashion lovers</h3>
+                    </div>
+                    <div class="col-md-4 col-xl-2 mt-4">
+                        <a href="https://www.etsy.com/shop/JocoseTie?ref=search_shop_redirect" target="_blank"
+                            class="btn btn-light btn-lg active" role="button" aria-pressed="true" id="headerA"><i
+                                class="fa fa-shopping-bag"></i> <strong> </br>Visit our </br>Etsy shop</strong> </a>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <nav class="navbar navbar-expand-sm navbar-light sticky-top">
+            <div class="container">
+                <a class="navbar-brand" href="#"></a><img src="images/logo-icon.jpg" height="30" width="30" /></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="women.html">WOMEN</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">MEN</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="blog.html">Blog</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- <div class="container mt-5 mb-5" id="shady">
+            <div class="row row-content align-items-center">
+                <div class="col-sm-4 order-sm-first col-md-3">
+                    <h2 class="text-right">Stylish Motivation</h2>
                 </div>
                 <div class="col">
-                    <h1>Jocose Tie</h1>
-                    <h3>Ties and bowties handcrafted with love</br>for passionate fashion lovers</h3>
-                </div>
-                <div class="col-md-4 col-xl-2 mt-4">
-                    <a href="https://www.etsy.com/shop/JocoseTie?ref=search_shop_redirect" target="_blank"
-                        class="btn btn-light btn-lg active" role="button" aria-pressed="true" id="headerA"><i
-                            class="fa fa-shopping-bag"></i> <strong> </br>Visit our </br>Etsy shop</strong> </a>
+                    <div class="media">
+                        <img class="d-flex ml-5 img-thumbnail men" src="Images/hobby collection done.jpg"
+                            alt="Jocose Men Banner" /> <br />
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#"></a><img src="images/Logo.png" height="30" width="30" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="women.html">WOMEN</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">MEN</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="blog.html">Blog</a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container mt-5 mb-5" id="shady">
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 order-sm-first col-md-3">
-                <h2 class="text-right">Stylish Motivation</h2>
-            </div>
-            <div class="col">
-                <div class="media">
-                    <img class="d-flex ml-5 img-thumbnail " src="img/hobby collection done 10.46.54 PM.jpg" alt="Jocose Men Banner" /> <br />
-                </div>
-            </div>
-        </div>
+        </div> -->
 
         <!--   Thumbnails Gallery   -->
 
 
         <div class="container mt-5 mb-5" id="thumb">
             <div class="row text-center text-lg-left">
-                <div class="col-lg-4 col-md-4 col-6 mb-4">
-                    <img class="img-thumbnail"
-                        src="img/20180123_130842.jpg"
-                        alt="20180123_130842.jpg" />
+                <div class="col-sm-4 col-md-4 col-12 mb-4">
+                    <img class="img-thumbnail" src="Images/20180123_130842.jpg" alt="20180123_130842.jpg" />
                 </div>
-                <div class="col-lg-4 col-md-4 col-6 mb-4">
-                    <img class="img-thumbnail"
-                        src="img/20180123_130924.jpg"
-                        alt="20180123_130924.jpg" />
+                <div class="col-sm-4 col-md-4 col-12 mb-4">
+                    <img class="img-thumbnail" src="Images/20180123_130924.jpg" alt="20180123_130924.jpg" />
                 </div>
-                <div class="col-lg-4 col-md-4 col-6 mb-4">
-                    <img class="img-thumbnail"
-                        src="img/20180123_131252.jpg"
-                        alt="20180123_131252.jpg" />
+                <div class="col-sm-4 col-md-4 col-12 mb-4">
+                    <img class="img-thumbnail" src="Images/20180123_131252.jpg" alt="20180123_131252.jpg" />
                 </div>
             </div>
 
             <div class="row text-center text-lg-left">
-                <div class="col-lg-4 col-md-4 col-6 mb-4">
-                    <img class="img-thumbnail"
-                        src="img/20180123_131450.jpg"
-                        alt="20180123_131450.jpg" />
+                <div class="col-sm-4 col-md-4 col-12 mb-4">
+                    <img class="img-thumbnail" src="Images/20180123_131450.jpg" alt="20180123_131450.jpg" />
                 </div>
-                <div class="col-lg-4 col-md-4 col-6 mb-4">
-                    <img class="img-thumbnail"
-                        src="img/20180123_131627.jpg"
-                        alt="20180123_131627.jpg" />
+                <div class="col-sm-4 col-md-4 col-12 mb-4">
+                    <img class="img-thumbnail" src="Images/20180123_131627.jpg" alt="20180123_131627.jpg" />
                 </div>
-                <div class="col-lg-4 col-md-4 col-6 mb-4">
-                    <img class="img-thumbnail"
-                        src="img/20180123_131800.jpg"
-                        alt="20180123_131800.jpg" />
+                <div class="col-sm-4 col-md-4 col-12 mb-4">
+                    <img class="img-thumbnail" src="Images/20180123_131800.jpg" alt="20180123_131800.jpg" />
                 </div>
             </div>
 
             <div class="row text-center text-lg-left">
-                <div class="col-lg-4 col-md-4 col-6">
-                    <img class="img-thumbnail"
-                        src="img/20180123_131819.jpg"
-                        alt="20180123_131819.jpg" />
+                <div class="col-sm-4 col-md-4 col-12 mb-4">
+                    <img class="img-thumbnail" src="Images/20180123_131819.jpg" alt="20180123_131819.jpg" />
                 </div>
-                <div class="col-lg-4 col-md-4 col-6">
-                    <img class="img-thumbnail"
-                        src="img/Kolo detem.jpg"
-                        alt="Kolo detem.jpg" />
+                <div class="col-sm-4 col-md-4 col-12 mb-4">
+                    <img class="img-thumbnail" src="Images/Prof. Pirk 2.jpg" alt="Kolo detem.jpg" />
                 </div>
-                <div class="col-lg-4 col-md-4 col-6">
-                    <img class="img-thumbnail"
-                        src="img/Liberty 3.jpg"
-                        alt="Liberty 3.jpg" />
+                <div class="col-sm-4 col-md-4 col-12 mb-4">
+                    <img class="img-thumbnail" src="Images/Liberty 3.jpg" alt="Liberty 3.jpg" />
                 </div>
             </div>
         </div>
-
-    <footer class="site-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 col-sm-2 offset-1">
-                    <h5>Links</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#" style="color:white;">Home</a></li>
-                        <li><a href="#" style="color:white;">Women</a></li>
-                        <li><a href="#" style="color:white;">Men</a></li>
-                        <li><a href="blog.html" style="color:white;">Blog</a></li>
-                    </ul>
-                </div>
-                <div class="col-4 col-sm-5 text-center">
-                    <h5>Social</h5>
-                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/jocosetie_bowtie"><i
-                            class="fa fa-instagram"></i></a>
-                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/jocoseTie"><i
-                            class="fa fa-facebook"></i></a>
-                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/Jocose_Tie"><i
-                            class="fa fa-twitter"></i></a>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link text-white" href="tel:+420602709269"><i
-                            class="fa fa-phone"></i> +420-602-709-269</a><br />
-                    <a role="button" class="btn btn-link text-white" href="mailto:info@jocosetie.com"><i
-                            class="fa fa-envelope-o"></i> info@jocosetie.com</a>
+        <footer class="site-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 col-sm-2 offset-1">
+                        <h5>Links</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="women.html">Women</a></li>
+                            <li><a href="#">Men</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-4 col-sm-5 text-center">
+                        <h5>Social</h5>
+                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/jocosetie_bowtie"><i
+                                class="fa fa-instagram"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/jocoseTie"><i
+                                class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/Jocose_Tie"><i
+                                class="fa fa-twitter"></i></a>
+                    </div>
+                    <div class="col-sm-4 text-center contact">
+                        <a role="button" class="btn btn-link text-white" href="tel:+420602709269"><i
+                                class="fa fa-phone"></i>
+                            +420-602-709-269</a><br />
+                        <a role="button" class="btn btn-link text-white" href="mailto:info@jocosetie.com"><i
+                                class="fa fa-envelope-o"></i> info@jocosetie.com</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
-
-</body>
+        </footer>
 
 
-</footer>
+
+        <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="js/scripts.js"></script>
+
+    </body>
 
 </html>
